--- a/news-summary-dashboard/frontend/package.json
+++ b/news-summary-dashboard/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^2.10.9",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -12,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^11.18.2",
     "react": "^19.1.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-scripts": "^5.0.1",
